Fix overflow issue in about, projects section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -700,7 +700,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    padding-bottom: 200px;
+    padding-bottom: 20px;
   }
 
   .about-image,
